basics html and css

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     />
 
     <!-- custom-styles -->
-    <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="./sass/main.scss" />
   </head>
   <body>
     <div class="container">
@@ -137,20 +137,20 @@
                   <source
                     type="image/webp"
                     srcset="
-                      images/what-we-do/gallary-1_@1x.webp 1x,
-                      images/what-we-do/gallary-1_@2x.webp 2x
+                      ./images/what-we-do/gallary-1_@1x.webp 1x,
+                      ./images/what-we-do/gallary-1_@2x.webp 2x
                     "
                   />
                   <source
                     type="image/jpg"
                     srcset="
-                      images/what-we-do/gallary-1_@1x.jpg 1x,
-                      images/what-we-do/gallary-1_@2x.jpg 2x
+                      ./images/what-we-do/gallary-1_@1x.jpg 1x,
+                      ./images/what-we-do/gallary-1_@2x.jpg 2x
                     "
                   />
                   <img
                     src="./images/what-we-do/gallary-1_@1x.jpg"
-                    srcset="images/what-we-do/gallary-1_@2x.jpg 2x"
+                    srcset="./images/what-we-do/gallary-1_@2x.jpg 2x"
                     alt="devices"
                     width="576"
                     height="600"
@@ -178,20 +178,20 @@
                   <source
                     type="image/webp"
                     srcset="
-                      images/what-we-do/gallary-2_@1x.webp 1x,
-                      images/what-we-do/gallary-2_@2x.webp 2x
+                      ./images/what-we-do/gallary-2_@1x.webp 1x,
+                      ./images/what-we-do/gallary-2_@2x.webp 2x
                     "
                   />
                   <source
                     type="image/jpg"
                     srcset="
-                      images/what-we-do/gallary-2_@1x.jpg 1x,
-                      images/what-we-do/gallary-2_@2x.jpg 2x
+                      ./images/what-we-do/gallary-2_@1x.jpg 1x,
+                      ./images/what-we-do/gallary-2_@2x.jpg 2x
                     "
                   />
                   <img
                     src="./images/what-we-do/gallary-2_@1x.jpg"
-                    srcset="images/what-we-do/gallary-2_@2x.jpg 2x"
+                    srcset="./images/what-we-do/gallary-2_@2x.jpg 2x"
                     alt="pyramid"
                     width="576"
                     height="600"
@@ -220,20 +220,20 @@
                   <source
                     type="image/webp"
                     srcset="
-                      images/what-we-do/gallary-3_@1x.webp 1x,
-                      images/what-we-do/gallary-3_@2x.webp 2x
+                      ./images/what-we-do/gallary-3_@1x.webp 1x,
+                      ./images/what-we-do/gallary-3_@2x.webp 2x
                     "
                   />
                   <source
                     type="image/jpg"
                     srcset="
-                      images/what-we-do/gallary-3_@1x.jpg 1x,
-                      images/what-we-do/gallary-3_@2x.jpg 2x
+                      ./images/what-we-do/gallary-3_@1x.jpg 1x,
+                      ./images/what-we-do/gallary-3_@2x.jpg 2x
                     "
                   />
                   <img
                     src="./images/what-we-do/gallary-3_@1x.jpg"
-                    srcset="images/what-we-do/gallary-3_@2x.jpg 2x"
+                    srcset="./images/what-we-do/gallary-3_@2x.jpg 2x"
                     alt="forest"
                     width="576"
                     height="600"
@@ -262,20 +262,20 @@
                   <source
                     type="image/webp"
                     srcset="
-                      images/what-we-do/gallary-4_@1x.webp 1x,
-                      images/what-we-do/gallary-4_@2x.webp 2x
+                      ./images/what-we-do/gallary-4_@1x.webp 1x,
+                      ./images/what-we-do/gallary-4_@2x.webp 2x
                     "
                   />
                   <source
                     type="image/jpg"
                     srcset="
-                      images/what-we-do/gallary-4_@1x.jpg 1x,
-                      images/what-we-do/gallary-4_@2x.jpg 2x
+                      ./images/what-we-do/gallary-4_@1x.jpg 1x,
+                      ./images/what-we-do/gallary-4_@2x.jpg 2x
                     "
                   />
                   <img
                     src="./images/what-we-do/gallary-4_@1x.jpg"
-                    srcset="images/what-we-do/gallary-4_@2x.jpg 2x"
+                    srcset="./images/what-we-do/gallary-4_@2x.jpg 2x"
                     alt="deer"
                     width="576"
                     height="600"
